--- a/index.html
+++ b/index.html
@@ -1,46 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>CodePen - A Pen by Mahajan Kapil</title>
-  <link rel="stylesheet" href="./style.css">
+    <meta charset="UTF-8">
+    <title>CodePen - A Pen by Mahajan Kapil</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-  <!-- partial:index.partial.html -->
-  <!-- Your content here -->
-  <div class="carousel">
-    <div class="carousel-item">
-        <div class="carousel-box">
-            <div class="title">Hi 👋</div>
-            <div class="num">01</div>
-            <img src="https://iili.io/2C06ebn.jpg" />
+    <!-- partial:index.partial.html -->
+    <div class="carousel">
+        <div class="carousel-item">
+            <div class="carousel-box">
+                <div class="title">Hi 👋</div>
+                <div class="num">01</div>
+                <img src="https://iili.io/2C06ebn.jpg" />
+            </div>
+        </div>
+
+        <div class="carousel-item">
+            <div class="carousel-box">
+                <div class="title">I want to tell you Something 😍</div>
+                <div class="num">02</div>
+                <img src="https://iili.io/2C06vxs.jpg" />
+            </div>
+        </div>
+
+        <div class="carousel-item">
+            <div class="carousel-box">
+                <div class="title">Please Keep Dragging 😊 </div>
+                <div class="num">03</div>
+                <img src="https://iili.io/2C06OOX.jpg" />
+            </div>
+        </div>
+
+        <div class="carousel-item">
+            <div class="carousel-box">
+                <div class="title">You are Amazing 🤩 </div>
+                <div class="num">04</div>
+                <img src="https://iili.io/2C064g2.jpg" />
+            </div>
+        </div>
+
+        <div class="carousel-item">
+            <div class="carousel-box">
+                <div class="title">Most Beautiful Person on Earth 💯</div>
+                <div class="num">05</div>
+                <img src="https://iili.io/2C06mqx.jpg" />
+            </div>
+        </div>
+
+        <div class="carousel-item">
+            <div class="carousel-box">
+                <div class="title">And Cutest 🎀</div>
+                <div class="num">06</div>
+                <img src="https://iili.io/2nKCPfa.jpg" />
+            </div>
+        </div>
+
+        <div class="carousel-item">
+            <div class="carousel-box">
+                <div class="title">And Since i met You 😗 </div>
+                <div class="num">07</div>
+                <img src="https://iili.io/2C06Dsj.jpg" />
+            </div>
+        </div>
+
+        <div class="carousel-item">
+            <div class="carousel-box">
+                <div class="title">I feel very Lucky Everyday 😇</div>
+                <div class="num">08</div>
+                <img src="https://iili.io/2C06tWb.jpg" />
+            </div>
+        </div>
+
+        <div class="carousel-item">
+            <div class="carousel-box">
+                <div class="title">and I have Crush on You 🥰</div>
+                <div class="num">09</div>
+                <img src="https://iili.io/2C06Zzu.jpg" />
+            </div>
+        </div>
+
+        <div class="carousel-item">
+            <div class="carousel-box">
+                <div class="title">I love You ❤️</div>
+                <div class="num">10</div>
+                <img src="https://iili.io/2C06Dsj.jpg" />
+            </div>
         </div>
     </div>
-    <!-- More carousel items here -->
-  </div>
 
-  <a href="https://www.instagram.com/college_wishlist" target="_blank" class="logo">C</a>
-  <div class="social">
-    <a href="#" target="_blank">
-      <svg>
-        <use xlink:href="#ico-linkedin"></use>
-      </svg>
-    </a>
-    <a href="https://www.instagram.com/college_wishlist" target="_blank">
-      <svg>
-        <use xlink:href="#ico-instagram"></use>
-      </svg>
-    </a>
-  </div>
+    <a href="https://www.instagram.com/college_wishlist" target="_blank" class="logo">C</a>
+    <div class="social">
+        <a href="#" target="_blank"><svg><use xlink:href="#ico-linkedin"></use></svg></a>
+        <a href="https://www.instagram.com/college_wishlist" target="_blank"><svg><use xlink:href="#ico-instagram"></use></svg></a>
+    </div>
 
-  <svg style="display: none">
-    <!-- SVG symbols here -->
+    <svg style="display: none">
+    <symbol id="ico-instagram" viewBox="0 0 35 35">
+      <!-- Instagram icon SVG content here -->
+    </symbol>
+
+    <symbol id="ico-linkedin" viewBox="0 0 35 35">
+      <!-- LinkedIn icon SVG content here -->
+    </symbol>
   </svg>
 
-  <div class="cursor"></div>
-  <div class="cursor cursor2"></div>
-  
-  <!-- partial -->
-  <script src="./script.js"></script>
+    <div class="cursor"></div>
+    <div class="cursor cursor2"></div>
+
+    <!-- partial -->
+    <script src="./script.js"></script>
+
 </body>
+
 </html>
